--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "albot",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "node-telegram-bot-api": "^0.20.1"
-  }
+    "name": "albot",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "node-telegram-bot-api": "^0.20.1",
+        "socket.io": "^1.4.5"
+    }
 }
